[package]
name = "bulls_and_cows"
version = "0.1.0"
authors = ["piqueras <ignacio.piqueras@silicon-gears.com>"]
edition = "2018"
description = "Rustacean implementation of the programming game 'Bulls and Cows'"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
env_logger = "0.7"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
thiserror = "1.0"
